--- a/deploy-site/templates/deploy-site-template.xml
+++ b/deploy-site/templates/deploy-site-template.xml
@@ -4,7 +4,7 @@
     <device foreach="{/pe}" when="{/pe}">
       <name>{device}</name>
       <config>
-        <ipv6 xmlns="urn:ios">
+        <ipv6 xmlns="urn:ios" when="{/ipv6='true'}">
             <unicast-routing/>
         </ipv6>
         <vrf xmlns="urn:ios">
@@ -22,7 +22,7 @@
                     </import>
                 </route-target>
                 </ipv4>
-                <ipv6>
+                <ipv6 when="{/ipv6='true'}">
                 <route-target>
                     <export>
                     <asn-ip>{/cust-id}:{/cust-id}</asn-ip>
@@ -44,7 +44,7 @@
                     <vlan-id>{/vlan}</vlan-id>
                     </dot1Q>
                 </encapsulation>
-                <bfd>
+                <bfd when="{/bfd='true'}">
                     <interval>
                     <msecs>300</msecs>
                     <min_rx>300</min_rx>
@@ -62,10 +62,10 @@
                     </primary>
                     </address>
                 </ip>
-                <ipv6>
+                <ipv6 when="{/ipv6='true'}">
                     <address>
                     <prefix-list>
-                        <prefix>2001:db8:1:310::1/64</prefix>
+                        <prefix>{ipv6-address}</prefix>
                     </prefix-list>
                     </address>
                     <enable/>
@@ -94,13 +94,13 @@
                         <id>{ngbr-address}</id>
                         <remote-as>{remote-as-number}</remote-as>
                         <activate/>
-                        <fall-over-bfd>
-                        <fall-over>
-                            <bfd/>
-                        </fall-over>
+                        <fall-over-bfd when="{/bfd='true'}">
+                            <fall-over>
+                                <bfd/>
+                            </fall-over>
                         </fall-over-bfd>
                         <as-override/>
-                        <soo>{remote-as-number}:3</soo>
+                        <soo when="{/soo='true'}">{remote-as-number}:3</soo>
                     </neighbor>
                     <maximum-paths>
                         <eibgp>
@@ -112,6 +112,26 @@
                     </vrf>
                 </ipv4>
                 </with-vrf>
+                <ipv6-with-vrf when="{/ipv6='true'}">
+                    <ipv6>
+                        <af>unicast</af>
+                        <vrf>
+                        <name>{id}</name>
+                        <neighbor>
+                            <id>{ngbr6-address}</id>
+                            <remote-as>{remote-as-number}</remote-as>
+                            <activate/>
+                            <fall-over-bfd when="{/bfd='true'}">
+                                <fall-over>
+                                    <bfd/>
+                                </fall-over>
+                            </fall-over-bfd>
+                            <as-override/>
+                            <soo when="{/soo='true'}">{remote-as-number}:3</soo>
+                        </neighbor>
+                        </vrf>
+                    </ipv6>
+                </ipv6-with-vrf>
             </address-family>
             </bgp>
         </router>
@@ -121,7 +141,7 @@
     <device foreach="{/cpe}" when="{/cpe}">
       <name>{device}</name>
         <config>
-            <ipv6 xmlns="urn:ios">
+            <ipv6 xmlns="urn:ios" when="{/ipv6='true'}">
                 <unicast-routing/>
             </ipv6>
             <policy-map xmlns="urn:ios">
@@ -146,7 +166,7 @@
                         <vlan-id>{/vlan}</vlan-id>
                         </dot1Q>
                     </encapsulation>
-                    <bfd>
+                    <bfd when="{/bfd='true'}">
                         <interval>
                         <msecs>300</msecs>
                         <min_rx>300</min_rx>
@@ -161,6 +181,14 @@
                         </primary>
                         </address>
                     </ip>
+                    <ipv6 when="{/ipv6='true'}">
+                         <address>
+                           <prefix-list>
+                             <prefix>{ipv6-address}</prefix>
+                           </prefix-list>
+                         </address>
+                         <enable/>
+                       </ipv6>
                     <service-policy>
                         <output>SHAPER</output>
                     </service-policy>
@@ -180,11 +208,15 @@
                 <neighbor>
                     <id>{ngbr-address}</id>
                     <remote-as>{remote-as-number}</remote-as>
-                    <fall-over-bfd>
+                    <fall-over-bfd when="{/bfd='true'}">
                     <fall-over>
                         <bfd/>
                     </fall-over>
                     </fall-over-bfd>
+                </neighbor>
+                <neighbor when="{/ipv6='true'}">
+                    <id>{ngbr6-address}</id>
+                    <remote-as>{remote-as-number}</remote-as>
                 </neighbor>
                 <address-family>
                     <ipv4>
@@ -192,8 +224,25 @@
                     <neighbor>
                         <id>{ngbr-address}</id>
                         <activate/>
+                        <fall-over-bfd when="{/bfd='true'}">
+                            <fall-over>
+                                <bfd/>
+                            </fall-over>
+                        </fall-over-bfd>
                     </neighbor>
                     </ipv4>
+                    <ipv6 when="{/ipv6='true'}">
+                        <af>unicast</af>
+                        <neighbor>
+                            <id>{ngbr6-address}</id>
+                            <activate/>
+                            <fall-over-bfd when="{/bfd='true'}">
+                                <fall-over>
+                                    <bfd/>
+                                </fall-over>
+                            </fall-over-bfd>
+                        </neighbor>
+                    </ipv6>
                 </address-family>
                 </bgp>
             </router>
