add topology stuff

--- a/DEPLOY-DMVPN/templates/DEPLOY-DMVPN-template.xml
+++ b/DEPLOY-DMVPN/templates/DEPLOY-DMVPN-template.xml
@@ -88,6 +88,9 @@
                                 <ipv4>
                                     <af>unicast</af>
                                     <autonomous-system>1</autonomous-system>
+                                    <topology>
+                                        <base/>
+                                    </topology>
                                     <af-interface>
                                         <name>Tunnel0</name>
                                         <next-hop-self>false</next-hop-self>
